[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai[datalib]>=1.63.2",
    "psycopg2-binary>=2.9.10",
    "flask-socketio>=5.5.1",
    "python-dotenv>=1.0.1",
    "youtube-transcript-api>=0.6.3",
    "pydantic>=2.10.6",
    "trafilatura>=2.0.0",
    "gevent>=24.11.1",
    "gevent-websocket>=0.10.1",
    "numpy>=2.2.3",
]
